--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "",
     "webpack": "webpack",
     "jade": "jade src/index.jade --out .",
-    "start": "webpack-dev-server --progress --colors --hot --content-base dist"
+    "start": "webpack-dev-server --progress --colors --hot --content-base dist",
+    "open": "npm run webpack && npm run jade && open index.html"
   },
   "keywords": [
     "drum",
